trunk/web/css/style.css
/*
    Document   : Common style across all JSPs are defined here
*/
root {
    display: block;
}

body{
    margin:0px;
    padding:0px;
    /*background-color: #F6F6F6;*/
    font-family: arial,sans-serif;
    font-size: 13px;
}

A:link {
    text-decoration: none;
    color: blue;
}
A:visited {
    text-decoration: none;
    color: blue;
}

A:active {
    text-decoration: none;
    color: blue;
}

#header{

    width: 100%;
    position: fixed;
    top: 0px;
    height: auto;
    background-color: #F6F6F6;
    z-index: 2;
}

#darksubheader{
    background-color: #F6F6F6;
    height: 40px;
    margin-bottom: 1px;
    width: 100%;
    z-index: 2;
}

#smalldarksubheader{
    background-color: white;
    height: 26px;
    margin-left: 0px;
    margin-bottom: 1px;
    width: 12%;
    float: left;
}

#whitesubheader{
    background-color: white;
    height: 1px;
    width: 100%;
    float: right;
}

#verticalwhiteline{
    background-color: red;
    width: 1px;
    z-index: 10;
}

#lightsubheader{
    background-color: #335C85;
    margin-left :0%;
    height: 26px;
    width: 100%;
    margin-bottom: 1px;
    z-index: 2;
    color: white;
    font-weight: bold;
    font-size: 12px;
}

#headertext{
    float: right;
    font-family:inherit;
    font-size: x-large;
    font-weight: bolder;
    color: #333333;
    margin-right: 20px;
    padding: 5px;
}

#iaslogo{
    height: 38px;
    width: 39px;
    float: left;
    position: fixed;
    margin-left: 3%;
    top:1px;
    background-image: url("../images/logo_main.png");
    z-index: 3;
    background-repeat: no-repeat;
}

#eVittaran{
    height: 38px;
    width: 165px;
    float: right;
    margin-right: 1%;
    top:1px;
    background-image: url("../images/eVitaran.png");
    z-index: 3;
    background-repeat: no-repeat;
}

#iasletterheadlogo{
    height: 38px;
    width: 39px;
    float: left;
    top:1px;
    background-image: url("../images/logo_main.png");
    z-index: 3;
    background-repeat: no-repeat;
}

#sidebar{
    background-color: #F6F6F6;/*#cc9b00;*/
    /*top:68px;*/
    top: 68px;
    width: 12%; /*110*/
    float: left;
    position: fixed;
    overflow: auto;
    height: 100%;
    padding-top: 0px;
    z-index: 2;
}

#bodyContainer{
    margin-top: 68px;
    width: 88%;
    overflow: auto;
    float: right;
    height: available;
}

#watermark{
    width: 50%;
    margin: 5% 24%;
}

.dateDiv{
    width: 100%;
}

.cpMonthNavigation{
    font-family: "Cambria",serif;
    font-size: 12px;
}

.cpYearNavigation{
    font-family: "Cambria",serif;
    font-size: 12px;
}

.MainDiv{
    /*background-color: #F6F6F6;*/
    padding: 2px 2px;
    height: auto;
}

.subMainDiv{
    padding: 5px;
    height: auto;
}

fieldset {
    padding: 3px;
    text-shadow: 0px 1px 0px #fff;
    outline: none;
    border: 1px solid #ababab;
    border-radius: 3px;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    margin: 2px;
}

.MainFieldset{
    /*background-color: rgb(232,245,248);*/
    padding: 3px;
}

.MainFieldset legend{
    font-size: small;
    font-weight: bold;
}


.subMainFieldSet{
    background: none repeat scroll 0 0 #F6F6F6;
    border-radius: 4px;
    padding: 5px 5px 5px 5px;
    margin-bottom: 5px;
}

.subMainFieldSet legend{
    font-weight: 600;
    font-size: 11px;
}


.subMainFieldSet tr td textarea{
    font-weight: normal;
    font-family:inherit;
    font-size: inherit;
}

.IASActionLabel{
    vertical-align: top;
}

.IASTextBox{
    width: 120px;
    height: 20px;
}

.IASDisabledTextBox{
    width: 120px;
    background-color: #EEE;
    height: 20px;
}

.IASDisabledTextBoxWide{
    width: 250px;
    background-color: #EEE;
    height: 20px;
}

.IASTextBoxWide{
    width: 250px;
    height: 20px;
}

.IASEmailTextBox{
    width: 200px;
    height: 20px;
}

.IASTextBoxForNumbers{
    width: 30px;
    height: 20px;
}

.IASTextBoxMandatory{
    width: 120px;
    background-color: antiquewhite;
    height: 20px;
}

.IASTextBoxMandatoryWide{
    width: 250px;
    background-color: antiquewhite;
    height: 20px;
}

.IASTextBoxMandatoryMax{
    width: 100%;
    height: 20px;
    background-color: antiquewhite;
}

.IASTextArea{
    font-family:inherit;
    font-size: inherit;
    height: 50px;
    width: 250px;
    max-width: 250px;
    max-height: 50px;
}

.IASTextAreaWide{
    font-family:inherit;
    font-size: inherit;
    height: 50px;
    width: 500px;
    max-width: 850px;
    max-height: 50px;
}

.IASTextAreaMandatory{
    font-family:inherit;
    font-size: inherit;
    background-color: antiquewhite;
    height: 50px;
    width: 250px;
    max-width: 250px;
    max-height: 50px;
}

.IASCheckBox{
}

.IASRadioButton{
    height: 12px;
}


.IASDateTextBox{
    width: 70px;
    height: 20px;
    background-color: #F6F6F6
}

.IASDateTextBoxMandatory{
    width: 70px;
    background-color: antiquewhite;
}

.IASButton{
    font-size: 1em;
    color: blue;
    text-transform: capitalize;
    margin: 0px 10px;
    z-index: 0;
    /*height: 25px;*/
    moz-border-radius: 15px;
    -webkit-border-radius: 15px;
    /*padding: 5px;*/
    background: -moz-linear-gradient(0% 100% 90deg, #D7D7D7, #F6F6F6) repeat scroll 0 0 transparent;
    border-color: #ABABAB;
    border-style: solid;
    border-width: 1px;
}

.SaveButton{
    color: blue;
}

.CancelButton{
    color: red;
}

.SearchButton{
    color: blue;
}

.JDSFileInput{
    font-family: Cambria;
    font-size: 12px;
    width: 95%;
}

.IASComboBox{
    width: 120px;
}

.IASComboBoxWide{
    width: 180px;
}

.IASComboBoxWideMandatory{
    width: 220px;
    background-color: antiquewhite;
}

.IASComboBoxMediumMandatory{
    width: 160px;
    background-color: antiquewhite;
}

.IASComboBoxSmallMandatory{
    width: 100px;
    background-color: antiquewhite;
}

.IASComboBoxMandatory{
    /*font-family: "Cambria",serif;
    font-size: inherit;*/
    background-color: antiquewhite;
}

.IASFormLeftDiv{
    float: left;
    width: 45%;
    padding: 5px;
}
/* ... */

